# spinnaker-pyside-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ProjectMap.md  README.md  justfile  pyproject.toml
.claude/agents/: template-maintainer.md
devops/: .pre-commit-config.yaml  Dockerfile  Dockerfile.jetson  camera-qc.desktop  docker-compose.yml  entrypoint.sh  install.sh  uninstall.sh
scripts/: bootstrap.py  generate_project_map.py  template_clean.py
src/app/: main.py
src/camera/: __init__.py  discover.py  mock.py  protocol.py  spinnaker.py
src/core/: config.py  projection.py
src/ui/: controls.py  main_window.py  projections.py  theme.py  viewport.py
tests/: conftest.py  test_camera.py  test_projection.py  test_pyspin_memory_bug.py  test_spinnaker.py  test_ui.py
