[project]
name = "spinnaker_app"
version = "0.1.0"
description = "Spinnaker camera livestream with PySide6 GUI"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.24.0,<2.0",  # Spinnaker SDK requires numpy 1.x
    "opencv-python>=4.8.0,<4.12",  # Pin to avoid numpy 2.x transitive dep
]

# NOTE: spinnaker-python is installed separately via `just install-spinnaker`
# because it's distributed as a local wheel from the FLIR SDK, not on PyPI.
# Always use `just sync` instead of `uv sync` to preserve the installation.

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.9.0",
    "pyright[nodejs]>=1.1.390",
    "mypy>=1.14.0",
]

test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.2.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/camera", "src/ui", "src/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
markers = [
    "hardware: mark test as requiring real camera hardware (deselect with '-m \"not hardware\"')",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["PySpin", "PySpin.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pyright]
include = ["src"]
